# yet-another-stream-parser

./: CLAUDE.md  README.md  pyproject.toml
benchmarks/: benchmark_parallel_parse.py  benchmark_parser.py
crystfel_yasp/: __init__.py  indexing.py  parallel.py  parser.py
docs/: crystfel-stream-format.md  indexing-usage.md
examples/: demo.py
scripts/: benchmark_parallel_parse.py  benchmark_parser.py  indexing.py  parallel_parse.py  stream_parser.py
