[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crystfel-yasp"
version = "0.1.0"
description = "Memory-efficient CrystFEL stream file parsing and indexing"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.20"]

[project.scripts]
crystfel-yasp = "crystfel_yasp.indexing:main"

[tool.setuptools]
packages = ["crystfel_yasp"]
